  * releasenotes.html: update (1.2.0.0)
  * debian/rules: DEBUG_CONFIGURATION=Release to switch codepaths used
  * Build native 'openbve-atspluginproxy' package
    + debian/control: add openbve-atspluginproxy and Depends
    + debian/openbve-atspluginproxy.*
    + debian/rules: combine common dh_* methods to binary
    + install OpenBve.exe.config Dll import mapping

 -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 26 Jul 2009 11:07:00 +0000

openbve (1.1.1.0-0ubuntu1) unreleased; urgency=low

  * New upstream development version (1.1.1.0)
  * debian/control: rev 'openbve-data' dependency (new strings)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 05 Jul 2009 21:10:00 +0000

openbve (1.0.7.2-0ubuntu1) karmic; urgency=low

  * New upstream version (1.0.7.2)
  * Update changelog.html (1.0.7.2)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Tue, 23 Jun 2009 20:20:00 +0000

openbve (1.0.6.7-0ubuntu1) unreleased; urgency=low

  * Add WatchdogExit() to take care of deadlocks in library shutdown
  * New upstream version (1.0.6.7)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Sun,  7 Jun 2009 02:54:00 +0000

openbve (1.0.6.2-0ubuntu1) unreleased; urgency=low

  * New upstream version (1.0.6.2)
  * Update 'debian/known-issues.txt'
  * Update 'openbve-data' Depends: >= 1.0.6.0+dfsg
  * Drop try..catch around saving of logs (should be handled by
    separate patch applied by upstream.
  * Update changelog.html (1.0.6.2)

 -- Paul Sladen <ubuntu@paul.sladen.org>  Fri, 29 May 2009 15:12:03 +0000
	
openbve (1.0.6.0-0ubuntu1) unreleased; urgency=low

  * New upstream version (1.0.6.0)
  * Make dropping out of full-screen *very* first priority
  * Update changelog.html (1.0.6.0) and releasenotes.html (1.0.5.0)
  * Update known-issues.txt

 -- Paul Sladen <ubuntu@paul.sladen.org>  Thu, 28 May 2009 06:53:10 +0000
	
openbve (1.0.2.0-0ubuntu2) jaunty; urgency=low

  * Explicitly depend on 'libmono-i18n2.0-cil' (LP: #356487)