@@ -11,6 +11,8 @@ openbve (1.2.0.0-0ubuntu1) unreleased; urgency=low
     + debian/openbve-atspluginproxy.*
     + debian/rules: combine common dh_* methods to binary
     + install OpenBve.exe.config Dll import mapping
+    + patch to chdir() to train directory before loading real plugin.so
+      (allow plugin to find its configuration file as no GetModuleName())
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 26 Jul 2009 11:07:00 +0000
 
